--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ node_js:
   - "12"
 script: npm run dev
 script: npm run test
+deploy:
+  provider: heroku
+  api_key:
+    secure: "e068637e-4e89-4d1f-b685-7ca10f63308c"
